# DeFMO

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  config.py  eval_dataset.py  main_settings.py  pyproject.toml  requirements.txt  run.py  train.py  utils.py
dataloaders/: conversion.py  loader.py  tbd_loader.py
helpers/: paper_helpers.py  torch_helpers.py
models/: discriminator.py  encoder.py  loss.py  rendering.py
renderer/: run_addbg.py
