[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.poetry]
name = "DeFMO"
version = "2.0"
description = "Deblurring and Shape Recovery of Fast Moving Objects"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>", "Denys Rozumnyi <rozumden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.1"
torchvision = "^0.9.1"
numpy = "^1.20.2"
opencv-python = "^4.5.1"
scikit-image = "^0.18.1"
Pillow = "^8.2.0"
tensorboard = "^2.5.0"
h5py = "^3.2.1"
tqdm = "^4.60.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
